--- a/src/server/Dockerfile
+++ b/src/server/Dockerfile
@@ -14,7 +14,7 @@ RUN npm install
 
 # env variables
 ENV PORT=4000
-ENV USER='dev_user'
+ENV USERNAME='dev_user'
 ENV PASSWORD='1234'
 ENV HOST='10.0.0.186'
 
