moved server/ to api/ and added server_scripts/
moved all the shell scripts to manage the server to a seperate package, server_scripts/

to avoid confusion over names, server/ has been renamed to api/

--- a/src/api/Dockerfile
+++ b/src/api/Dockerfile
@@ -2,10 +2,10 @@
 FROM mariadb:10.8.3
 FROM node:16.13.1
 
-# copies the server package
+# copies the api package
 COPY . /app
 
-# working directory = src/server.
+# working directory = src/api.
 # running npm start or node app.js now works as normal
 WORKDIR /app
 
